// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTable /> composes the className correctly 1`] = `
<table
  className="xui-editabletable test-classname"
>
  <ContextProvider
    value={
      Object {
        "rowOptions": Object {},
      }
    }
  />
</table>
`;

exports[`<XUIEditableTable /> render with the caption 1`] = `
<table
  className="xui-editabletable"
>
  <caption
    className="xui-editabletable--caption"
  >
    An editable table
  </caption>
  <ContextProvider
    value={
      Object {
        "rowOptions": Object {},
      }
    }
  />
</table>
`;

exports[`<XUIEditableTable /> renders correctly 1`] = `
<table
  className="xui-editabletable"
>
  <ContextProvider
    value={
      Object {
        "rowOptions": Object {},
      }
    }
  >
    <div>
      XUIEditableTable
    </div>
  </ContextProvider>
</table>
`;
